xscreensaver (5.0.8-0ubuntu5cr2) UNRELEASED; urgency=low

  * Restore still-referenced ignore_all_errors_ehandler function to
    driver/lock.c.
  * Drop -std=c89 for the moment. Somehow a // comment crept into
    <bits/string3.h>. We ought to fix this, but drop the strictness for now.
  * Add more complete build-dependencies, and use automatically-generated
    dependencies rather than hardcoding them.

 -- Colin Watson <cjwatson@canonical.com>  Fri, 08 Jan 2010 11:44:13 +0000

xscreensaver (5.0.8-0ubuntu5cr1) karmic; urgency=low

    * Update versions to be higher than the version on stable karmic
    * No differences from 5.08 source code we pulled in

 -- The Chromium OS Authors <chromium-os-dev@googlegroups.com>  Thu, 17 Dec 2009 14:11:00 -0800

xscreensaver (5.0.8-chromeos2) karmic; urgency=low

    * Initial release

 -- The Chromium OS Authors <chromium-os-dev@googlegroups.com>  Wed, 15 Jul 2009 23:13:15 -0700
