@@ -6,6 +6,9 @@ xscreensaver (5.0.8-0ubuntu5cr2) UNRELEASED; urgency=low
     <bits/string3.h>. We ought to fix this, but drop the strictness for now.
   * Add more complete build-dependencies, and use automatically-generated
     dependencies rather than hardcoding them.
+  * Configure with --build and --host options for cross-compilation.
+  * Fix configure not to unconditionally fail when attempting
+    cross-compilation.
 
  -- Colin Watson <cjwatson@canonical.com>  Fri, 08 Jan 2010 11:44:13 +0000
 
